💄fix dark mode on frontpage

--- a/mucgpt-frontend/src/components/ChatLayout/ChatLayout.module.css
+++ b/mucgpt-frontend/src/components/ChatLayout/ChatLayout.module.css
@@ -26,7 +26,6 @@
     height: 100%;
     padding-bottom: var(--spacingHorizontalM);
     width: var(--sidebarWidth);
-    background-color: var(--colorNeutralBackground1Hover);
 }
 
 .chatEmptyState {
