--- a/mucgpt-frontend/src/components/ThemeSelector/ThemeSelector.module.css
+++ b/mucgpt-frontend/src/components/ThemeSelector/ThemeSelector.module.css
@@ -10,13 +10,14 @@
     border-radius: 4px;
     font-weight: bold;
     font-size: 12px;
-    color: var(--colorNeutralForegroundOnBrand);
+    color: var(--colorNeutralForeground1);
     min-width: 28px;
     text-align: center;
 }
 
 .iconRightMargin {
     margin-right: 4px;
+    color: var(--colorNeutralForeground1);
 }
 
 .buttonContainer {
@@ -40,5 +41,5 @@
 
 .darkTheme {
     background-color: var(--colorNeutralForeground1);
-    color: var(--colorNeutralBackground1);
+    color: var(--colorNeutralForeground1);
 }
