--- a/mucgpt-frontend/src/pages/menu/Menu.module.css
+++ b/mucgpt-frontend/src/pages/menu/Menu.module.css
@@ -20,7 +20,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
     width: 100%;
-    background: var(--colorBrandStroke2);
+    background: var(--colorBackgroundOverlay);
 }
 
 .heading {
@@ -29,7 +29,7 @@
     text-align: center;
     margin-bottom: 50px;
     margin-top: 50px;
-    color: var(--colorNeutralBackground1);
+    color: var(--colorNeutralForeground1);
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     letter-spacing: -0.5px;
     line-height: 1.2;
